# Sophos_RAG

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  ROADMAP.md  docker-compose.yml  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  python-tests.yml
api/: __init__.py  app.py  routes.py
config/: README.md  config_template.yaml  default.yaml  huggingface.yaml  openai.yaml
docs/: api.md  architecture.md
examples/: custom_rag.py  deepseek_example.py  simple_rag.py
scripts/: data_ingestion.py  evaluation.py  indexing.py
sophos_rag/: cli.py
sophos_rag/config/: config.yaml  config_manager.py
sophos_rag/data/: __init__.py  loader.py  processor.py  splitter.py
sophos_rag/embeddings/: __init__.py  encoder.py
sophos_rag/generator/: __init__.py  base.py  llm.py
sophos_rag/pipeline/: __init__.py  rag.py
sophos_rag/retriever/: __init__.py  search.py  vector_store.py
sophos_rag/utils/: __init__.py  env.py
src/: __init__.py  cli.py
src/data/: __init__.py  processor.py  splitter.py
src/embeddings/: __init__.py  encoder.py
src/generator/: __init__.py  llm.py  prompt.py
src/pipeline/: __init__.py  rag.py
src/retriever/: __init__.py  search.py  vector_store.py
src/utils/: __init__.py  logging.py  metrics.py
tests/: __init__.py  api_test.http  test_data.py  test_embeddings.py  test_pipeline.py  test_retriever.py
tests/unit/: conftest.py
tests/unit/data/: test_loader.py
tests/unit/embeddings/: test_embeddings.py
tests/unit/generator/: test_deepseek_api.py  test_generator.py
tests/unit/pipeline/: test_pipeline.py
tests/unit/retriever/: test_retriever.py
tests/unit/utils/: test_config.py  test_installation.py
tests/utils/: mock_llm.py
