[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sophos_rag"
version = "0.1.0"
description = "Sophos RAG - A RAG system"
authors = [
    {name = "LIZH-System", email = "contact@lizh.tech"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core ML & Data Science
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.10.0",
    
    # NLP & Embeddings
    "transformers>=4.15.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.6.0",
    "spacy>=3.2.0",
    
    # Vector Storage
    "faiss-cpu>=1.7.0",
    "chromadb>=0.4.0",
    
    # Document Processing
    "beautifulsoup4>=4.10.0",
    "python-docx>=0.8.11",
    "PyPDF2>=2.0.0",
    
    # API & Web
    "fastapi>=0.95.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.9.0",
    
    # LLM Integration
    "openai>=1.0.0",
    
    # Utilities
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    
    # Testing
    "pytest>=7.0",
    "pytest-cov>=3.0",
    
    # Development Tools
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=1.0",
    
    # Documentation
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/sophos-rag"
Repository = "https://github.com/your-org/sophos-rag.git"

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.0",
]

[tool.setuptools]
packages = ["sophos_rag"]

[tool.setuptools.package-data]
sophos_rag = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=sophos_rag --cov-report=term-missing"

[tool.coverage.run]
source = ["sophos_rag"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]