[metadata]
name = sophos_rag
version = attr: src.__version__
description = A Retrieval-Augmented Generation (RAG) system
long_description = file: README.md
long_description_content_type = text/markdown
author = LIZH-System
author_email = your.email@example.com
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/LIZH-System/Sophos_RAG/issues
    Source Code = https://github.com/LIZH-System/Sophos_RAG

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    torch>=1.10.0
    transformers>=4.15.0
    sentence-transformers>=2.2.0
    faiss-cpu>=1.7.0
    chromadb>=0.4.0
    openai>=1.0.0
    langchain>=0.0.200
    nltk>=3.6.0
    spacy>=3.2.0
    beautifulsoup4>=4.10.0
    python-docx>=0.8.11
    PyPDF2>=2.0.0
    fastapi>=0.95.0
    uvicorn>=0.15.0
    pydantic>=1.9.0
    tqdm>=4.62.0
    pyyaml>=6.0
    python-dotenv>=0.19.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.1.0
    isort>=5.10.0
    flake8>=4.0.0
    mypy>=0.931
    sphinx>=4.3.0
    sphinx-rtd-theme>=1.0.0
gpu =
    faiss-gpu>=1.7.0

[options.packages.find]
exclude =
    tests
    examples
    notebooks

[options.entry_points]
console_scripts =
    sophos_rag = src.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv 